cambio header  perfil usuario/ añadido pantalla final form crear evento

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ $(function() {
                         <label for="contraseña">Contraseña</label><br>
                         <input type="password" name="password"><br>
                         <p>¿No recuerdas tu contraseña? <a href="">Recupérala</a></p>
-                        <button id="send" class="registrarse1" type="submit">INICIAR SESIÓN</button>
+                        <button href="sindex.html"id="send" class="registrarse1" type="submit">INICIAR SESIÓN</button>
                       </form>
                       <div class="inicia-sesion1">
                         <p>¿Todavía no tienes tu cuenta en ROOOF? <a href="">Regístrate</a></p></div>
@@ -108,7 +108,7 @@ $(function() {
                         <button id="send" class="registrarse" type="submit">REGISTRARSE</button>
                       </form>
                       <div class="inicia-sesion">
-                        <p>¿Ya tienes una cuenta en ROOOF? <a href="">Inicia seción</a></p></div>
+                        <p>¿Ya tienes una cuenta en ROOOF? <a href="">Inicia sesión</a></p></div>
                     </div>
                     <script type="text/javascript">
                          $(document).ready(function () {
@@ -132,7 +132,7 @@ $(function() {
     <div class="wrap">
         <h1>ROOOF</h1>
         <p>Conciertos, teatro y gastronomía en casas de Barcelona</p>
-        <div class="button__wrap"><a href="somos.html" class="button">DESCUBRE QUÉ ES</a></div>
+        <div class="button__wrap"><a href="evento.html" class="button">BUSCAR EVENTOS</a></div>
     </div>
 </div>
 
@@ -238,15 +238,15 @@ $(function() {
         </div>
         <div class="push"></div>
         <div class="icon-text">
-            <h2>Elige el plan</h2>
+            <h3>Elige el plan</h3>
             <p>Escoge el evento que más te guste. Música, gastronomía, teatro...</p>
         </div>
         <div class="icon-text">
-            <h2>Resérvalo</h2>
+            <h3>Resérvalo</h3>
             <p>Haz tu reserva y paga el día del evento en casa del artista.<br>Nosotros te enviaremos la dirección completa una vez que hayas reservado.</p>
         </div>
         <div class="icon-text">
-            <h2>Disfruta del evento</h2>
+            <h3>Disfruta del evento</h3>
             <p>Acude a tu cita y<br>¡Disfruta la experiencia!</p>
         </div>
     </div>
