--- a/screa-evento-form.html
+++ b/screa-evento-form.html
@@ -24,7 +24,6 @@
                     <li><a href="screa.html">Crea tu evento</a></li>
                     </ul>
                     <ul class="sright">
-                    <img src="img/slay.png" class="log-in"></img>
                     <div class="pop-log">
                       <span>✖</span>
                       <h1>Slay</h1>
@@ -64,7 +63,7 @@
                              });
                          });
                     </script>
-                    <button class="sregistro">Slay</button>
+                    <button class="sregistro">Mi Perfil</button>
                     <div class="pop">
                       <span>✖</span>
                       <h1>Regístrate</h1>
@@ -190,17 +189,36 @@
                 </div>
             </div>
     </div>
-
     <div id="c6">
-            <p>Completa <span>4 pasos</span> para publicar<br>tu anuncio</p>
+        <a href="#c6" title="Publicar">Publicar</a>
             <div class="tab-content">
-                <h2>¡ENHORABUENA!</h2>
+            <h2>Ya está casi listo</h2>
                 <p>Ya tenemos todos los datos necesarios<br>para publicar tu anuncio. Pulsa el botón de <span>publicar</span><br>y tu evento aparecerá en la lista de eventos de ROOOF</p>
+
+                <div class="space"></div>
                 <div class="tab-button">
-                    <a href="#">PUBLICAR</a>
+                    <a href="#c7">PUBLICAR</a>
                 </div>
             </div>
     </div>
+
+    <div id="c7">
+        <p>Completa <span>4 pasos</span> para publicar<br>tu anuncio</p>
+
+            <div class="tab-content">
+                <h2>¡ENHORABUENA!</h2>
+                <p>Tu evento ha sido publicado con éxito.
+            Recuerda completar tu perfil para que tus invitados sepan más sobre ti
+                y se animen a compartir esta experiencia contigo.</p>
+                <div class="tab-button">
+                    <a href="sevento.html">CONTINUAR EN ROOOF</a>
+                </div>
+            </div>
+    </div>
+
+
+
+
 
 </div>
 </div>
