--- a/sperfil-colectivo-fantasma.html
+++ b/sperfil-colectivo-fantasma.html
@@ -43,7 +43,6 @@ $(function() {
                     <li><a href="screa.html">Crea tu evento</a></li>
                     </ul>
                     <ul class="sright">
-                    <img src="img/slay.png" class="log-in"></img>
                     <div class="pop-log">
                       <span>✖</span>
                       <h1>Slay</h1>
@@ -83,7 +82,7 @@ $(function() {
                              });
                          });
                     </script>
-                    <button class="sregistro">Slay</button>
+                    <button class="sregistro">Mi Perfil</button>
                     <div class="pop">
                       <span>✖</span>
                       <h1>Regístrate</h1>
@@ -136,19 +135,17 @@ $(function() {
 
     <div class="wrap sobre-user">
 
-            <img src="img/cocodrila-user.png">
+            <img src="img/troll.png">
             <div class="main-info-user">
-                <h1>UGLY HEROES</h1>
+                <h1>COLECTIVO FANTASMA</h1>
 
-                <p>Sainer (1988) y Bezt (1987) son dos artistas polacos que desde 2008 conforman el duo Ugly Heroes.
-
-                  Graduados en bellas artes en Lodz (Polonia), encontraron en las producciones murales a gran escala el formato ideal donde expresar y mostrar su arte. Una línea de trabajo caracterizada por la representación de figuras humanas llenas de colorido que dan vida al mundo imaginario y surrealista donde conviven estos mordaces y misteriosos personajes.
+                <p>Colectivo Fantasma se nutre de la llegada del graffiti en los 90. Nacidos en Cataluña pero con influencias del cómic europeo y japonés, y un claro interés por el grafismo, crean un estilo subversivo a través de muros, dibujos y telas.
 
                  <br>
                  Les encanta la buena música, la buena comida y la buena compañia.
 
                 </p>
-                <p>Más info<a href="http://uglyheroes.com/"> Ugly Heroes</p></a>
+                <p>Más info<a href="http://uglyheroes.com/"> Colectivo Fantasma</p></a>
             </div>
         <div class="push"></div>
     </div>
