--- a/spicnic.html
+++ b/spicnic.html
@@ -42,7 +42,6 @@ $(function() {
                     <li><a href="screa.html">Crea tu evento</a></li>
                     </ul>
                     <ul class="sright">
-                    <img src="img/slay.png" class="log-in"></img>
                     <div class="pop-log">
                       <span>✖</span>
                       <h1>Slay</h1>
@@ -82,7 +81,7 @@ $(function() {
                              });
                          });
                     </script>
-                    <button class="sregistro">Slay</button>
+                    <button class="sregistro">Mi Perfil</button>
                     <div class="pop">
                       <span>✖</span>
                       <h1>Regístrate</h1>
@@ -216,7 +215,7 @@ $(function() {
             <img src="img/troll.png">
             <h1>SOBRE COLECTIVO FANTASMA</h1>
             <h2>Creador del evento</h2>
-            <div class="ver-perfil"><a href="">VER PERFIL</a></div>
+            <div class="ver-perfil"><a href="sperfil-colectivo-fantasma.html">VER PERFIL</a></div>
             <p>Colectivo Fantasma se nutre de la llegada del graffiti en los 90. Nacidos en Cataluña pero con influencias del cómic europeo y japonés, y un claro interés por el grafismo, crean un estilo subversivo a través de muros, dibujos y telas.</p>
             <p>Más info: <a href="http://CollectivoFantasma.com/">www.ColectivoFantasma.com</a></p>
         </div>
