--- a/ssomos.html
+++ b/ssomos.html
@@ -41,7 +41,7 @@ $(function() {
                     <li><a href="screa.html">Crea tu evento</a></li>
                     </ul>
                     <ul class="sright">
-                    <img src="img/slay.png" class="log-in"></img>
+                    <!--<img src="img/slay.png" class="log-in"></img>-->
                     <div class="pop-log">
                       <span>✖</span>
                       <h1>Slay</h1>
@@ -81,7 +81,7 @@ $(function() {
                              });
                          });
                     </script>
-                    <button class="sregistro">Slay</button>
+                    <button class="sregistro">Mi Perfil</button>
                     <div class="pop">
                       <span>✖</span>
                       <h1>Regístrate</h1>
@@ -241,15 +241,15 @@ $(function() {
         </div>
         <div class="push"></div>
         <div class="icon-text">
-            <h2>Elige el plan</h2>
+            <h3>Elige el plan</h3>
             <p>Escoge el evento que más te guste. Música, gastronomía, teatro...</p>
         </div>
         <div class="icon-text">
-            <h2>Resérvalo</h2>
+            <h3>Resérvalo</h3>
             <p>Haz tu reserva y paga el día del evento en casa del artista.<br>Nosotros te enviaremos la dirección completa una vez que hayas reservado.</p>
         </div>
         <div class="icon-text">
-            <h2>Disfruta del evento</h2>
+            <h3>Disfruta del evento</h3>
             <p>Acude a tu cita y<br>¡Disfruta la experiencia!</p>
         </div>
     </div>
