--- a/sindex.html
+++ b/sindex.html
@@ -41,10 +41,10 @@ $(function() {
                     <li><a href="screa.html">Crea tu evento</a></li>
                     </ul>
                     <ul class="sright">
-                    <img src="img/slay.png" class="log-in"></img>
+
                     <div class="pop-log">
                       <span>✖</span>
-                      <h1>Slay</h1>
+                      <h1>Mi perfil</h1>
                       <div class="reg-facebook">
                         <img src="img/social-facebook.png">
                         <a href="">Inicia sesión con facebook</a>
@@ -81,7 +81,7 @@ $(function() {
                              });
                          });
                     </script>
-                    <button class="sregistro">Slay</button>
+                    <button class="sregistro">Mi Perfil</button>
                     <div class="pop">
                       <span>✖</span>
                       <h1>Regístrate</h1>
@@ -132,7 +132,7 @@ $(function() {
     <div class="wrap">
         <h1>ROOOF</h1>
         <p>Conciertos, teatro y gastronomía en casas de Barcelona</p>
-        <div class="button__wrap"><a href="ssomos.html" class="button">DESCUBRE QUÉ ES</a></div>
+        <div class="button__wrap"><a href="sevento.html" class="button">BUSCAR EVENTOS</a></div>
     </div>
 </div>
 
@@ -238,15 +238,15 @@ $(function() {
         </div>
         <div class="push"></div>
         <div class="icon-text">
-            <h2>Elige el plan</h2>
+            <h3>Elige el plan</h3>
             <p>Escoge el evento que más te guste. Música, gastronomía, teatro...</p>
         </div>
         <div class="icon-text">
-            <h2>Resérvalo</h2>
+            <h3>Resérvalo</h3>
             <p>Haz tu reserva y paga el día del evento en casa del artista.<br>Nosotros te enviaremos la dirección completa una vez que hayas reservado.</p>
         </div>
         <div class="icon-text">
-            <h2>Disfruta del evento</h2>
+            <h3>Disfruta del evento</h3>
             <p>Acude a tu cita y<br>¡Disfruta la experiencia!</p>
         </div>
     </div>
@@ -255,8 +255,8 @@ $(function() {
 <div class="crea">
     <h1>HAZTE CREADOR</h1>
     <p>¿Tienes algo que mostrar? Con Rooof es muy fácil: tu pones el<br>talento, nosotros te llevamos el público a casa.</p>
-    <div class="bottom-abajo">
-        <div class="bottom"><p><a href="screa.html">CREA TU EVENTO</a></p></div>
+    <<div class="bottom-abajo">
+      <div class="button__wrap"><a href="screa.html" class="button">CREA TU EVENTO</a></div>
     </div>
 </div>
 <footer>
