--- a/sperfil-tutu.html
+++ b/sperfil-tutu.html
@@ -43,7 +43,6 @@ $(function() {
                     <li><a href="screa.html">Crea tu evento</a></li>
                     </ul>
                     <ul class="sright">
-                    <img src="img/slay.png" class="log-in"></img>
                     <div class="pop-log">
                       <span>✖</span>
                       <h1>Slay</h1>
@@ -83,7 +82,7 @@ $(function() {
                              });
                          });
                     </script>
-                    <button class="sregistro">Slay</button>
+                    <button class="sregistro">Mi Perfil</button>
                     <div class="pop">
                       <span>✖</span>
                       <h1>Regístrate</h1>
