--- a/crea.html
+++ b/crea.html
@@ -151,7 +151,7 @@ $(function() {
                     <p>Este puede ser el principio de una granamistad.</p>
                 </div>
                 <div class="bottom-unete">
-                    <div class="button__wrap"><a href="screa-evento-form.html#c1" class="button">CREA TU EVENTO</a></div>
+                    <div class="button__wrap"><a href="crea-evento-y-formulario.html" class="button">CREA TU EVENTO</a></div>
                 </div>
             </div>
         </div>
@@ -192,7 +192,7 @@ $(function() {
             </div>
         </div>
         <div class="bottom-unete100">
-            <div class="button__wrap"><a href="screa-evento-form.html#c1" class="button">CREA TU EVENTO</a></div>
+            <div class="button__wrap"><a href="crea-evento-y-formulario.html" class="button">CREA TU EVENTO</a></div>
         </div>
     </div>
 
