--- a/inicio-sesion-2.html
+++ b/inicio-sesion-2.html
@@ -30,17 +30,18 @@ $(function() {
 </script>
 
 
+
 </head>
 <body>
 	<div class="header">
-            <div class="wrap">
-                <div class="logo"><a href="index.html">ROOOF</a></div>
-                <nav>
-                    <ul class="left">
+      <div class="wrap">
+        <div class="logo"><a href="index.html">ROOOF</a></div>
+        <nav>
+          <ul class="left">
                     <li><a href="somos.html">¿Qu&eacute; es ROOOF?</a></li>
-                    <li><a href="evento.html">Busca un evento</a></li>
-                    <li><a href="crea.html">Crea tu evento</a></li>
-                    </ul>
+          <li><a href="evento.html">Busca un evento</a></li>
+          <li><a href="crea.html">Crea tu evento</a></li>
+          </ul>
                     <ul class="right">
                     <button class="log-in">Inicia sesión</button>
                     <div class="pop-log">
@@ -64,8 +65,9 @@ $(function() {
                         <label for="contraseña">Contraseña</label><br>
                         <input type="password" name="password"><br>
                         <p>¿No recuerdas tu contraseña? <a href="">Recupérala</a></p>
-                        <button id="send" class="registrarse1" type="submit">INICIAR SESIÓN</button>
+                        <button id="send" class="registrarse1pg" type="submit">INICIAR SESIÓN</button>
                       </form>
+
                       <div class="inicia-sesion1">
                         <p>¿Todavía no tienes tu cuenta en ROOOF? <a href="">Regístrate</a></p></div>
                     </div>
@@ -108,8 +110,9 @@ $(function() {
                         <p>Al registrate aceptas las <a href="">condiciones legales</a>.</p>
                         <button id="send" class="registrarse" type="submit">REGISTRARSE</button>
                       </form>
-                      <div class="inicia-sesion">
-                        <p>¿Ya tienes una cuenta en ROOOF? <a href="">Inicia seción</a></p></div>
+                      <div class="inicia-sesionpg">
+                        <p>¿Ya tienes una cuenta en ROOOF? <a href="">Inicia seción</a></p>
+                      </div>
                     </div>
                     <script type="text/javascript">
                          $(document).ready(function () {
@@ -124,52 +127,62 @@ $(function() {
                          });
                     </script>
                     </ul>
-                </nav>
-            </div>
+        </nav>
+      </div>
+  </div>
+
+
+
+
+<div class="inicio-sesionpg">
+    <div class="container-inicio-sesionpg">
+
+                <div class="poppg">
+
+                    <h1>Regístrate</h1>
+                    <div class="reg-facebook">
+                        <img src="img/social-facebook.png">
+                        <a href="">Regístrate con facebook</a>
+                    </div>
+                    <div class="reg-twitter">
+                        <img src="img/social-twitter.png">
+                        <a href="">Regístrate con twitter</a>
+                    </div>
+                    <div class="reg-line-left"></div>
+                    <div class="zero">o</div>
+                    <div class="reg-line-right"></div>
+                    <h2>Regístrate con cuenta de correo</h2>
+                    <div class="push"></div>
+                    <form class="reg">
+
+                        <label for="nombre">Nombre</label><br>
+                        <input type="text" name="palabra"><br>
+                        <label for="email">Email</label><br>
+                        <input type="email" name="email"><br>
+                        <label for="contraseña">Contraseña</label><br>
+                        <input type="password" name="password"><br>
+
+                        <div class="push"></div>
+                        <p>Al registrate aceptas las <a href="">condiciones legales.</a></p>
+                        </form>
+
+                        <a href="screa-evento-form.html#c1">
+                          <div class="center">
+                          <div class ="registro-reserva"><p>REGISTRARSE </p>
+                          </div></a>
+                          </div>
+
+                        <div class="push"></div>
+                        <div class="inicia-sesion-alerta">
+                          <p>¿Ya tienes una cuenta en ROOOF? <a href="">Inicia sesión</a></p>
+                        </div>
+                    </div>
     </div>
+</div>
 
 
-<div class="ficha-evento">
-    <div class="titulo">
-        <h2>CREA TU EVENTO EN CASA</h2>
-        <p>ROOOF te permite darte a conocer y ganar algo de dinero</p>
-    </div>
-    <div class="wrap">
-        <div class="wrap3">
-            <h1>¿Qué tienes pensado hacer?</h1>
-            <div class="wrap3-form">
-              <p>Quiero hacer un evento</p>
-                <form class="select-category">
-                  <select>
-                    <option value="gastronomia">Gastronomía</option>
-                    <option value="musica">Música</option>
-                    <option value="arte">Arte</option>
-                    <option value="teatro">Teatro</option>
-                    <option value="performance">Performance</option>
-                    <option value="comida">Comida</option>
-                  </select>
-                </form>
-                <p>llama-</p>
-                <input class="text" type="text" name="palabra">
-                <p class="aforo">Aforo</p>
-                <input class="aforo" type="number" min="0" max="999999">
-                <p class="barrio">Barrio</p>
-                <form class="select-category-barrio">
-                  <select>
-                    <option value="barceloneta">Barceloneta</option>
-                    <option value="eixampla">Eixampla</option>
-                    <option value="gracia">Gracia</option>
-                  </select>
-                </form>
-                    <div class="button__wrap crea-evento-form"><a href="inicio-sesion-2.html" class="button">CONTINUAR</a></div>
 
-                    <p>*Acutualmente sólo se puede crear eventos en la ciudad de barcelona.</p>
-              </div>
 
-        </div>
-
-    </div>
-    <div class="push"></div>
 
 <footer>
     <div class="wrap">
