links form crear evento login

--- a/screa-evento-y-formulario.html
+++ b/screa-evento-y-formulario.html
@@ -130,92 +130,46 @@ $(function() {
 
 <div class="ficha-evento">
     <div class="titulo">
-        <h2>VIETNAMESE FOOD EXPERIENCE</h2>
-        <p>Comida con "rollito"</p>
+        <h2>CREA TU EVENTO EN CASA</h2>
+        <p>ROOOF te permite darte a conocer y ganar algo de dinero</p>
     </div>
     <div class="wrap">
-        <div class="wrap2">
-        <div class="main">
-            <img src="img/vietnamita.jpg">
-            <h1>SOBRE EL EVENTO</h1>
-            <p>Prepararé una cena Vietnamita típica bastante sana y sabrosa. Entre otros platos estarán el bobún y los rollitos. El bobún es la típica comida que se suele vender en puestos ambulantes en vietnam, los rollitos con muy parecidos a los que conocéis pero más sanos ya que durante su elaboración no se frie ningún ingrediente.</p>
-            <p>Ven con tus amigos, conoce gente nueva y disfruta de un nuevo sabor.</p>
-            <p>Os espero :)</p>
+        <div class="wrap3">
+            <h1>¿Qué tienes pensado hacer?</h1>
+            <div class="wrap3-form">
+              <p>Quiero hacer un evento</p>
+                <form class="select-category">
+                  <select>
+                    <option value="gastronomia">Gastronomía</option>
+                    <option value="musica">Música</option>
+                    <option value="arte">Arte</option>
+                    <option value="teatro">Teatro</option>
+                    <option value="performance">Performance</option>
+                    <option value="comida">Comida</option>
+                  </select>
+                </form>
+                <p>llama-</p>
+                <input class="text" type="text" name="palabra">
+                <p class="aforo">Aforo</p>
+                <input class="aforo" type="number" min="0" max="999999">
+                <p class="barrio">Barrio</p>
+                <form class="select-category-barrio">
+                  <select>
+                    <option value="barceloneta">Barceloneta</option>
+                    <option value="eixampla">Eixampla</option>
+                    <option value="gracia">Gracia</option>
+                  </select>
+                </form>
+                    <div class="button__wrap crea-evento-form"><a href="screa-evento-form.html#c1" class="button">CONTINUAR</a></div>
 
-        </div>
-        <div class="main-compartir">
-            <p>COMPARTIR</p>
-            <img src="img/social-twitter-333.png">
-            <img src="img/social-facebook-333.png">
-        </div>
-        </div>
-        <aside>
-            <h3>DETALLES DEL EVENTO</h3>
-            <div class="main-etiqueta-gastronomia"><p>#GASTRONOMÍA</p></div>
-            <div class="push"></div>
-            <div class="lista">
-                <div class="fecha">
-                    <img src="img/calendar.png">
-                    <h4>Fecha</h4>
-                    <p>Sábado 1 Abril, 20:00-23:00h</p>
-                </div>
-                <div class="push"></div>
-                <div class="lugar">
-                    <img src="img/place.png">
-                    <h4>Lugar</h4>
-                    <p>Mundet</p>
-                </div>
-                <div class="push"></div>
-                <div class="aforo">
-                    <img src="img/user.png">
-                    <h4>Aforo</h4>
-                    <p>8 personas</p>
-                </div>
-                <div class="push"></div>
-            </div>
-            <div class="main-precio"><p>16€ / persona</p></div>
-            <div class="push"></div>
-
-
-             <div class="border-ticket">
-              <div>
-                <ul>
-                  <li>
-                    <h4>Escoge tu entrada</h4></li>
-
-                  <li><input type="radio" name="radio-btn" />+1 voy solo</li>
-
-                  <li><input type="radio" name="radio-btn" />+2 voy con un amigo</li>
-                  </ul>
-
+                    <p>*Acutualmente sólo se puede crear eventos en la ciudad de barcelona.</p>
               </div>
 
-              <div class="aside-botton paso2"><p><a href="">RESERVA ENTRADA</a></p></div>
-            </div>
-            <div class="push"></div>
-
-            <div class="reserva-container">
-             <div class="aviso-reserva">
-                <h4>Reservar es muy fácil</h4>
-                <p>Reserva ahora y paga el día del evento en casa del creador. Te mandaremos la dirección exacta y los datos de contacto a tu email una vez que hayas reservado.</p>
-            </div>
-            </div>
-        </aside>
-    </div>
-    <div class="push"></div>
-
-    <div class="main-line"></div>
-    <div class="push"></div>
-    <div class="wrap">
-        <div class="sobre-host">
-            <img src="img/tutu.png">
-            <h1>SOBRE TUTU</h1>
-            <h2>Creador del evento</h2>
-            <div class="ver-perfil"><a href="sperfil-tutu.html">VER PERFIL</a></div>
-            <p>Me llamo Tutu, soy francesa de origen vietnamita y me encanta compartir la mesa y mi cultura gastronómica con mis invitados.</p>
-            <p>Más info: <a href="http://themilkywayexpress.bandcamp.com/">Tutu oui çe moi</a></p>
         </div>
+
     </div>
+    <div class="push"></div>
+
 <footer>
     <div class="wrap">
         <div class="logo-down">ROOOF</div>
