--- a/screa.html
+++ b/screa.html
@@ -38,7 +38,7 @@ $(function() {
                     <ul class="left">
                     <li><a href="ssomos.html">¿Qu&eacute; es ROOOF?</a></li>
                     <li><a href="sevento.html">Busca un evento</a></li>
-                    <li><a href="screa.html">Crea tu evento</a></li>
+                    <li><a href="screa-evento-y-formulario.html">Crea tu evento</a></li>
                     </ul>
                     <ul class="sright">
                     <div class="pop-log">
@@ -150,7 +150,7 @@ $(function() {
                     <p>Este puede ser el principio de una granamistad.</p>
                 </div>
                 <div class="bottom-unete">
-                    <div class="button__wrap"><a href="screa-evento-form.html#c1" class="button">CREA TU EVENTO</a></div>
+                    <div class="button__wrap"><a href="screa-evento-y-formulario.html" class="button">CREA TU EVENTO</a></div>
                 </div>
             </div>
         </div>
@@ -191,7 +191,7 @@ $(function() {
             </div>
         </div>
         <div class="bottom-unete100">
-            <div class="button__wrap"><a href="screa-evento-form.html#c1" class="button">CREA TU EVENTO</a></div>
+            <div class="button__wrap"><a href="screa-evento-y-formulario.html" class="button">CREA TU EVENTO</a></div>
         </div>
     </div>
 
