anadir los barrios

--- a/screa-evento-y-formulario.html
+++ b/screa-evento-y-formulario.html
@@ -155,9 +155,16 @@ $(function() {
                 <p class="barrio">Barrio</p>
                 <form class="select-category-barrio">
                   <select>
-                    <option value="barceloneta">Barceloneta</option>
                     <option value="eixampla">Eixampla</option>
-                    <option value="gracia">Gracia</option>
+                    <option value="gracia">Gràcia</option>
+                    <option value="sant-marti">Sant Martí</option>
+                    <option value="ciutat-vella">Ciutat Vella</option>
+                    <option value="les-corts">Les Corts</option>
+                    <option value="nou-barris">Nou Barris</option>
+                    <option value="sants-montjuic">Sants-Montjuïc</option>
+                    <option value="sant-andreu">Sant Andreu</option>
+                    <option value="sarria-sant-gervasi">Sarrià-Sant Gervasi</option>
+                    <option value="horta-guinardo">Horta-Guinardó</option>
                   </select>
                 </form>
                     <div class="button__wrap crea-evento-form"><a href="screa-evento-form.html#c1" class="button">CONTINUAR</a></div>
