--- a/screa-evento-y-formulario.html
+++ b/screa-evento-y-formulario.html
@@ -148,14 +148,14 @@ $(function() {
                     <option value="comida">Comida</option>
                   </select>
                 </form>
-                <p>llama-</p>
-                <input class="text" type="text" name="palabra">
+                <p>llamado</p>
+                <input class="text" type="text" name="palabra" placeholder="título...">
                 <p class="aforo">Aforo</p>
                 <input class="aforo" type="number" min="0" max="999999">
                 <p class="barrio">Barrio</p>
                 <form class="select-category-barrio">
                   <select>
-                    <option value="eixampla">Eixampla</option>
+                    <option value="eixampla">Eixample</option>
                     <option value="gracia">Gràcia</option>
                     <option value="sant-marti">Sant Martí</option>
                     <option value="ciutat-vella">Ciutat Vella</option>
