changes of sugerencias and style sheet

--- a/index.html
+++ b/index.html
@@ -142,78 +142,70 @@ $(function() {
     <div class="titulo">
         <h2>NO TE ABURRAS EL FIN DE SEMANA</h2>
         <p>en ROOOF tenemos planes para ti</p>
+    </div>
+
         <ul class="evento">
-            <li class="uno">
+            <li class="uno evento-item">
                 <a href="cocodrila.html">
-                    <ul class="cover-color"></ul>
-                    <p>-Creado por <a href="cocodrila.html">Ugly Heroes</a>-</p>
-                    <h3>COCODRILA</h3>
-                    <ul class="etiqueta">
-                        <li>#ARTE</li>
-                    </ul>
-                    <div class="bottom-small">
-                        <a href="cocodrila.html">VER MÁS</a>
+                    <div class="vertical-center">
+                        <h3 class="evento-item_title">COCODRILA</h3>
+                        <p class="evento-item_tag">
+                            #ARTE
+                        <p>
                     </div>
                 </a>
             </li>
-            <li class="dos"><a href="milky.html">
-                 <ul class="cover-color"></ul>
-                    <p>-Creado por <a href="milky.html">Milky</a>-</p>
-                    <a href="milky.html"><h3>THE MILKY WAY EXPRESS</h3></a>
-                    <ul class="etiqueta">
-                        <li>#ARTE #GASTROMONÍA</li>
-                    </ul>
-                    <div class="bottom-small">
-                        <a href="milky.html">VER MÁS</a>
+            <li class="dos evento-item">
+                <a href="milky.html">
+                    <div class="vertical-center">
+                        <h3 class="evento-item_title">THE MILKY WAY EXPRESS</h3>
+                        <p class="evento-item_tag">
+                            #Arte #Gastromonía
+                        </p>
                     </div>
-            </a></li>
-            <li class="tres"><a href="solose.html">
-                 <ul class="cover-color"></ul>
-                    <p>-Creado por <a href="solose.html">Carmen</a>-</p>
-                    <h3>SÓLO SÉ QUE NO SÉ NADA</h3>
-                    <ul class="etiqueta">
-                        <li>#TEATRO #PERPORMANCE</li>
-                    </ul>
-                    <div class="bottom-small">
-                        <a href="solose.html">VER MÁS</a>
+                </a>
+            </li>
+            <li class="tres evento-item">
+                <a href="solose.html">
+                    <div class="vertical-center">
+                        <h3 class="evento-item_title">SÓLO SÉ QUE NO SÉ NADA</h3>
+                        <p class="evento-item_tag">
+                            #TEATRO #PERPORMANCE
+                        </p>
                     </div>
-            </a></li>
-            <li class="cuatro"><a href="vietnamita.html">
-                 <ul class="cover-color"></ul>
-                    <p>-Creado por <a href="vietnamita.html">Tutu</a>-</p>
-                    <h3>VIETNAMESE FOOD EXPERIENCE</h3>
-                    <ul class="etiqueta">
-                        <li>#GASTRONOMÍA</li>
-                    </ul>
-                    <div class="bottom-small">
-                        <a href="vietnamita.html">VER MÁS</a>
+                </a>
+            </li>
+            <li class="cuatro evento-item">
+                <a href="vietnamita.html">
+                    <div class="vertical-center">
+                        <h3 class="evento-item_title">VIETNAMESE FOOD EXPERIENCE</h3>
+                        <p class="evento-item_tag">
+                            #GASTRONOMÍA
+                        </p>
                     </div>
-            </a></li>
-            <li class="cinco"><a href="band.html">
-                 <ul class="cover-color"></ul>
-                    <p>-Creado por <a href="band.html">Los Locos del Maíz</a>-</p>
-                    <h3>A BAND APART</h3>
-                    <ul class="etiqueta">
-                        <li>#MÚSICA #COMEDIA</li>
-                    </ul>
-                    <div class="bottom-small">
-                        <a href="band.html">MUY PRONTO</a>
+                </a>
+            </li>
+            <li class="cinco evento-item">
+                <a href="band.html">
+                    <div class="vertical-center">
+                        <h3 class="evento-item_title">A BAND APART</h3>
+                        <p class="evento-item_tag">
+                            #MÚSICA #COMEDIA
+                        </p>
                     </div>
-            </a></li>
-            <li class="seis"><a href="picnic.html">
-                 <ul class="cover-color"></ul>
-                    <p>-Creado por <a href="picnic.html">Colectivo Fantasma</a>-</p>
-                    <h3>PICNIC</h3>
-                    <ul class="etiqueta">
-                        <li>#ARTE #EXPO</li>
-                    </ul>
-                    <div class="bottom-small">
-                        <a href="picnic.html">VER MÁS</a>
+                </a>
+            </li>
+            <li class="seis evento-item">
+                <a href="picnic.html">
+                    <div class="vertical-center">
+                        <h3 class="evento-item_title">PICNIC</h3>
+                        <p class="evento-item_tag">
+                            #ARTE #EXPO
+                        </p>
                     </div>
-            </a></li>
-
+                </a>
+            </li>
         </ul>
-    </div>
 </div>
 
 </div>
